--- a/roles/webserver/templates/etc/nginx/sites-enabled/hostconf.j2
+++ b/roles/webserver/templates/etc/nginx/sites-enabled/hostconf.j2
@@ -1,3 +1,4 @@
+# {{ ansible_managed }}
 upstream {{ app_name }}_rackup {
   server unix:///home/{{ deploy_user }}/{{ app_name }}/shared/tmp/sockets/unicorn.sock fail_timeout=0;
 }
